<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNombre"
        app:layout_constraintStart_toEndOf="@+id/textViewNombre"
        app:layout_constraintTop_toTopOf="@+id/textViewNombre"
        app:layout_constraintVertical_bias="0.693" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="88dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/edad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toEndOf="@+id/textViewNombre"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <SeekBar
        android:id="@+id/seekBarEdad"
        android:layout_width="284dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewEdad"
        app:layout_constraintStart_toStartOf="@+id/textViewEdad"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdad" />

    <TextView
        android:id="@+id/textViewEdadMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/_10"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarEdad"
        app:layout_constraintEnd_toStartOf="@+id/seekBarEdad"
        app:layout_constraintTop_toTopOf="@+id/seekBarEdad"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewEdadMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/_100"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarEdad"
        app:layout_constraintStart_toEndOf="@+id/seekBarEdad"
        app:layout_constraintTop_toTopOf="@+id/seekBarEdad"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewEdadReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/vacio"
        app:layout_constraintEnd_toEndOf="@+id/seekBarEdad"
        app:layout_constraintStart_toStartOf="@+id/seekBarEdad"
        app:layout_constraintTop_toBottomOf="@+id/seekBarEdad" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/eviar_datos"
        app:layout_constraintEnd_toEndOf="@+id/textViewEdadReal"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/textViewEdadReal"
        app:layout_constraintTop_toBottomOf="@+id/textViewEdadReal" />

</androidx.constraintlayout.widget.ConstraintLayout>